--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 								<a href="#"><i class="fe fe-document"></i> <span> Reports</span> <span class="menu-arrow"></span></a>
 								<ul style="display: none;">
 									<li><a href="invoice.html">Invoice Reports</a></li>
+									<li><a href="ReportMarket.html">Market Expences</a></li>
 								</ul>
 							</li>
 							
@@ -362,7 +363,7 @@
 							<!-- Recent Orders -->
 							<div class="card card-table">
 								<div class="card-header">
-									<h4 class="card-title">Actual Cash Item List</h4>
+									<h4 class="card-title">Stock count list</h4>
 								</div>
 								<div class="card-body">
 									<div class="table-responsive">
@@ -371,9 +372,9 @@
 												<tr style="background-color: #08d19f; color: aliceblue;">
 													<th>ID</th>
 													<th>Name Items</th>
-													<th>Quantity Items</th>
+													<th>Date</th>
+													<th>Remaining Quantity</th>
 													<th>Sold Quantity</th>
-													<th>Sales Price</th>
 													<th>Actual Cash Item</th>
 													
 												</tr>
