--- a/index.html
+++ b/index.html
@@ -362,9 +362,13 @@
 						
 							<!-- Recent Orders -->
 							<div class="card card-table">
-								<div class="card-header">
-									<h4 class="card-title">Stock count list</h4>
+								<div>
+									<div class="card-header">
+										<h4 class="card-title">Stock count list</h4>
+									</div>
+									<input type="date" id="myDate" style="margin-top: 6px;margin-bottom: 6px; margin-left: 18px;">
 								</div>
+								
 								<div class="card-body">
 									<div class="table-responsive">
 										<table class="table table-hover table-center mb-0">
