--- a/MarketExpences.html
+++ b/MarketExpences.html
@@ -125,6 +125,7 @@
 								<a href="#"><i class="fe fe-document"></i> <span> Reports</span> <span class="menu-arrow"></span></a>
 								<ul style="display: none;">
 									<li><a href="invoice.html">Invoice Reports</a></li>
+									<li><a href="ReportMarket.html">Market Expences</a></li>
 								</ul>
 							</li>
 							
