--- a/ReportMarket.html
+++ b/ReportMarket.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-        <title>Invoice Reports</title>
+        <title>MArket Expenses Report</title>
 		
 		<!-- Favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
@@ -169,7 +169,8 @@
 				<li class="submenu">
 					<a href="#"><i class="fe fe-document"></i> <span> Reports</span> <span class="menu-arrow"></span></a>
 					<ul style="display: none;">
-						<li class="active"><a href="invoice.html">Invoice Reports</a></li>
+						<li ><a href="invoice.html">Invoice Reports</a></li>
+						<li class="active"><a href="ReportMarket.html">Market Expences</a></li>
 					</ul>
 				</li>
 				
