--- a/invoice-report.html
+++ b/invoice-report.html
@@ -123,6 +123,7 @@
 								<a href="#"><i class="fe fe-document"></i> <span> Reports</span> <span class="menu-arrow"></span></a>
 								<ul style="display: none;">
 									<li class="active"><a href="invoice.html">Invoice Reports</a></li>
+									<li><a href="ReportMarket.html">Market Expences</a></li>
 								</ul>
 							</li>
 							
