--- a/MarketExpences.html
+++ b/MarketExpences.html
@@ -106,8 +106,14 @@
 							<li class="active"> 
 								<a href="MarketExpences.html"><i class="fe fe-layout"></i> <span>Market Expences</span></a>
 							</li>
+							<li > 
+								<a href="AvailableMeals.html"><i class="fe fe-layout"></i> <span>Available Meals</span></a>
+							</li>
 							<li> 
 								<a href="Items.html"><i class="fe fe-layer"></i> <span>Items</span></a>
+							</li>
+							<li> 
+								<a href="Meals.html"><i class="fe fe-layer"></i> <span>Meals</span></a>
 							</li>
 							<li> 
 								<a href="Expences.html"><i class="fe fe-shopping-bag"></i> <span>Expences</span></a>
@@ -176,7 +182,9 @@
 											</tbody>
 										</table>
 									</div>
+									
 								</div>
+								<h4 style="margin-left: 20px; color:#085c35;">Total: $<samp style="color: #085c35;" id="ruselta"></samp></h4>
 							</div>
 							<!-- /Recent Orders -->
 							
