--- a/Expences.html
+++ b/Expences.html
@@ -104,8 +104,14 @@
 							<li > 
 								<a href="MarketExpences.html"><i class="fe fe-layout"></i> <span>Market Expences</span></a>
 							</li>
+							<li > 
+								<a href="AvailableMeals.html"><i class="fe fe-layout"></i> <span>Available Meals</span></a>
+							</li>
 							<li> 
 								<a href="Items.html"><i class="fe fe-layer"></i> <span>Items</span></a>
+							</li>
+							<li> 
+								<a href="Meals.html"><i class="fe fe-layer"></i> <span>Meals</span></a>
 							</li>
 							<li class="active"> 
 								<a href="Expences.html"><i class="fe fe-shopping-bag"></i> <span>Expences</span></a>
