--- a/invoice.html
+++ b/invoice.html
@@ -150,8 +150,14 @@
 				<li > 
 					<a href="MarketExpences.html"><i class="fe fe-layout"></i> <span>Market Expences</span></a>
 				</li>
+				<li > 
+					<a href="AvailableMeals.html"><i class="fe fe-layout"></i> <span>Available Meals</span></a>
+				</li>
 				<li> 
 					<a href="Items.html"><i class="fe fe-users"></i> <span>Items</span></a>
+				</li>
+				<li> 
+					<a href="Meals.html"><i class="fe fe-layer"></i> <span>Meals</span></a>
 				</li>
 				<li> 
 					<a href="Expences.html"><i class="fe fe-shopping-bag"></i> <span>Expences</span></a>
@@ -215,10 +221,10 @@
 							<table class="table">
 								<thead>
 									<tr>
-										<th>Items</th>
+										<th>Meal</th>
 										<th class="text-nowrap">Remaining Quantity</th>
 										<th class="d-none d-sm-table-cell">Sold Quantity</th>
-										<th>Actual_Cach_Item</th>
+										<th>Actual Cach</th>
 										
 									</tr>
 								</thead>
