--- a/Meals.html
+++ b/Meals.html
@@ -247,6 +247,12 @@
 											<input type="text"  class="form-control" id="idprice">
 										</div>
 									</div>
+									<div class="col-12 col-sm-6">
+										<div class="form-group">
+											<label>Quantity</label>
+											<input type="text"  class="form-control" id="idqntt">
+										</div>
+									</div>
 									
 								</div>
 								<button type="button" class="btn btn-primary w-100" id="editMeal">Save Changes</button>
